<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.DeviceInsertionActivity">

    <!-- ID definition rules -->
    <!-- <element type>_<associated screen>_<item>_<specific> -->
    <LinearLayout
        android:id="@+id/linear_menu_top_device_insertion"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.500"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@tools:sample/backgrounds/scenic">

        <Button
            android:id="@+id/button_menu_context_device_insertion"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/device_detail_button_menu_context" />

    </LinearLayout>

    <ScrollView
        android:id="@+id/list_items_device_insertion"
        android:layout_width="0pt"
        android:layout_height="0pt"
        android:divider="@null"
        android:dividerHeight="0dp"
        app:layout_constraintBottom_toTopOf="@+id/linear_menu_bottom_device_insertion"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linear_menu_top_device_insertion"
        tools:listitem="@layout/main_list_item">

        <LinearLayout
            android:id="@+id/constraint_scroll_items_device_insertion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <include layout="@layout/device_insertion_info" />

            <include layout="@layout/device_insertion_appearance" />

            <include layout="@layout/device_insertion_localization" />

            <include layout="@layout/device_insertion_menu" />

        </LinearLayout>

    </ScrollView>

    <LinearLayout
        android:id="@+id/linear_menu_bottom_device_insertion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:srcCompat="@tools:sample/backgrounds/scenic">

        <Button
            android:id="@+id/button_menu_home_device_insertion"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ellipsize="end"
            android:singleLine="true"
            android:text="@string/device_detail_button_menu_1" />

        <Button
            android:id="@+id/button_menu_dashboard_device_insertion"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ellipsize="end"
            android:singleLine="true"
            android:text="@string/device_detail_button_menu_2" />

        <Button
            android:id="@+id/button_menu_devices_device_insertion"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ellipsize="end"
            android:singleLine="true"
            android:text="@string/device_detail_button_menu_3" />

        <Button
            android:id="@+id/button_menu_profile_device_insertion"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ellipsize="end"
            android:singleLine="true"
            android:text="@string/device_detail_button_menu_4" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>