<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/bottom_horizontal_item"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- ID definition rules -->
    <!-- <element type>_<associated layout>_<item>_<specific> -->
    <androidx.cardview.widget.CardView
        android:id="@+id/card_main_banner_item"
        android:layout_width="match_parent"
        android:layout_height="170dp"
        android:layout_margin="10dp"
        app:cardCornerRadius="40sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/image_main_banner_item"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#9FB0EA" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraint_main_banner_item"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.cardview.widget.CardView
                android:id="@+id/card_main_item_icon"
                android:layout_width="80dp"
                android:layout_height="80dp"
                app:cardCornerRadius="20dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.100"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.5">

                <ImageView
                    android:id="@+id/image_main_item_icon"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_margin="0dp"
                    android:background="#BBC3DD"
                    android:contentDescription="@string/main_image_item_description"
                    android:padding="0dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/text_main_item_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="18dp"
                android:text="@string/main_text_item_label"
                android:textSize="20sp"
                app:layout_constraintStart_toEndOf="@+id/card_main_item_icon"
                app:layout_constraintTop_toTopOf="@+id/card_main_item_icon" />

            <TextView
                android:id="@+id/text_main_item_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/main_text_item_description"
                android:textSize="15sp"
                app:layout_constraintBottom_toBottomOf="@+id/card_main_item_icon"
                app:layout_constraintStart_toStartOf="@+id/text_main_item_label" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>